--- a/WebTechnologies-Week2/Index.html
+++ b/WebTechnologies-Week2/Index.html
@@ -1,1 +1,56 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>First HTML5 Page From PLP-Fellowship</title>
+    <!-- CSS could be linked here -->
+</head>
+<body>
+    <!-- Header section with page title -->
+    <header>
+        <h1>TechnoServe Here for You </h1>
+        <p>This is a simple demonstration of HTML5 semantic elements</p>
+    </header>
+
+    <!-- Navigation section -->
+    <nav>
+        <ul>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
+    <!-- Main content section -->
+    <main>
+        <section id="home">
+            <h2>Home</h2>
+            <p>Welcome to my first HTML5 website! This site demonstrates the basic structure and semantic elements of HTML5.</p>
+            <p>HTML5 is the latest evolution of the standard that defines HTML. It includes new elements and attributes that reflect typical usage on modern websites.</p>
+        </section>
+
+        <section id="about">
+            <h2>About</h2>
+            <p>I am PLP-Fellow by name of Ernest <br> From Rwanda, Kigali.</p>
+            <article>
+                <h3>What is HTML5?</h3>
+                <p>HTML5 is a markup language used for structuring and presenting content on the World Wide Web. It is the fifth and final major HTML version that is a World Wide Web Consortium (W3C) recommendation.</p>
+            </article>
+        </section>
+    </main>
+
+    <!-- Footer with contact information -->
+    <footer>
+        <h2>Contact Information</h2>
+        <address>
+            Email: <a href="mailto:example@domain.com">example@domain.com</a><br>
+            Phone: <a href="tel:+1234567890">(123) 456-7890</a><br>
+            Address: +250788906846 Technoserve LLC, Kigali City
+        </address>
+        <p>&copy; 2025 TechnoServe.LLC</p>
+    </footer>
+</body>
+</html>
